# bustcord

./: .gitignore  Cargo.toml  flake.nix  sc.toml
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/components/: Cargo.toml
crates/components/src/: server.rs
crates/cssengine/: Cargo.toml  README.md
crates/cssengine/benches/: parser.rs
crates/cssengine/examples/: parse.rs
crates/cssengine/src/: animation.rs  error.rs  lib.rs  style.rs  unit.rs
crates/cssengine/src/parser/: analyzer.rs  declaration.rs  mod.rs  values.rs
crates/cssengine/src/unit/: color.rs  cursor.rs  duration.rs  px.rs  text.rs
crates/egui_css/: Cargo.toml  README.md
crates/egui_css/examples/: simple.rs
crates/egui_css/src/: apply.rs  lib.rs  widget.rs
crates/egui_css/src/apply/: cursor.rs  distances.rs  gap.rs
crates/layouts/: Cargo.toml
crates/layouts/src/: home.rs  lib.rs
src/: lib.rs  main.rs
