[package]
name = "bustcord"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/common",
    "crates/components", "crates/cssengine",
    "crates/egui_css",
    "crates/layouts",
]

[workspace.dependencies]
egui = "0.29"
egui_css = { path = "./crates/egui_css" }
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }

[dependencies]
egui.workspace = true
eframe.workspace = true
egui_css.workspace = true
app = { path = "./crates/app" }
