[package]
name = "cssengine"
version = "0.1.0"
edition = "2021"

[features]
default = ["grid", "flexbox"]
serde = ["smallvec/serde", "taffy/serde"]
grid = ["taffy/grid"]
flexbox = ["taffy/flexbox"]
tailwind_colors = []

[[bench]]
name = "parser"
harness = false

[dependencies]
csscolorparser = { version = "0.7.0", default-features = false }
smallvec = { version = "1.13.2", features = ["const_new"] }
taffy = { version = "0.6.2", default-features = false, features = [
    "taffy_tree",
    "block_layout",
] }

[dev-dependencies]
divan = "0.1.16"
