[package]
name = "egui_css"
version = "0.1.0"
edition = "2021"
authors = ["Sergio Ribera <sergioribera@rustlang-es.org>"]
description = "Use css to styling egui"
keywords = ["css", "egui", "styling", "web", "gui"]
categories = ["web-programming", "development-tools"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/SergioRibera/bustcord"
homepage = "https://github.com/SergioRibera/bustcord"
readme = "README.md"
exclude = ["examples"]

[features]
default = []
tailwind_colors = ["cssengine/tailwind_colors"]

[dependencies]
egui.workspace = true
smallvec = { version = "1.13.2" }
cssengine = { version = "0.1.0", path = "../cssengine" }

[dev-dependencies]
eframe.workspace = true
egui_extras = {version = "0.29", default-features = false, features = ["syntect"]}
